[metadata]
name = rhinorefine
version = 0.9.4
author = Harsh, Abdullah, Siddharth
description = Preprocessing python package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True